feat: display list of configured integrations in /connect
